@@ -1,6 +1,7 @@
 Version 1.0-rc3 (changes from aircrack-ng 1.0-rc2) - Released ?? ??? 2009:
 * aircrack-ng: Fixed compilation on 64 bit (Sha-SSE2).
 * aircrack-ng: Fixed errors when compiling on OS X 10.5.6 PPC.
+* aircrack-ng: Added an option to write the key to a file.
 * airmon-ng: Bypass interface checks when ps command returns an error. Needed for BusyBox? limited ps command.
 
 Version 1.0-rc2 (changes from aircrack-ng 1.0-rc1) - Released 22 Jan 2009:
